@@ -17,8 +17,8 @@
         #Selection Cuts - Hit
         ####################################
         Cut_HitAdc_Min = '50';
-	Cut_HitAdc_Max = '1600';
-	Cut_HitTime_Min = '1';
+        Cut_HitAdc_Max = '1600';
+        Cut_HitTime_Min = '1';
         Cut_HitTime_Max = '14';
         #Event Range
         ####################################
@@ -97,6 +97,14 @@
             Histo_YTitle = 'N';
             Histo_BinRange = '0,23';  #Expects two numbers separated by a comma
             Histo_NumBins = '23';
+        [END_HISTO_INFO]
+        [BEGIN_HISTO_INFO]
+            Histo_Name = 'hitADC';
+            Histo_XTitle = 'Hit ADC';
+            Histo_YTitle = 'N';
+            Histo_BinRange = '0,15000';  #Expects two numbers separated by a comma
+            #Histo_NumBins = '150';
+            Histo_NumBins = '100';
         [END_HISTO_INFO]
         [BEGIN_HISTO_INFO]
             Histo_Name = 'hitPos';
